--- a/_literaryposts/2020-06-19-Care.md
+++ b/_literaryposts/2020-06-19-Care.md
@@ -16,3 +16,5 @@ I worked hard to build the bridge between us. I did everything I possibly could.
 People keep advising me to let go of the things that hurt me. Things that don't allow me to be happy. I should take that advice a little more seriously from now on. I should learn to let go of the things that hurt me. Let me start with you. 
 
 > "You never really cared. I don't anymore. Now we are even." #ExcerptFromABookIWillNeverWrite
+
+--Nikitha
