added excerpts to projects

--- a/_projects/2019-05-08-RoP.md
+++ b/_projects/2019-05-08-RoP.md
@@ -1,6 +1,7 @@
 ---
 title: "Retinopathy of Prematurity – Feature Engineering and Predictive Analysis"
 collection: projects
+excerpt: "Features extracted from retinal images of premature infants are used to build a model to identify the stage of the disease. This is in collaboration with Rx Digi Health Platform, a start-up based in Bangalore, India."
 type: "Bachelor Thesis Project"
 permalink: /projects/2019-05-08-RoP
 venue: "PES University in collaboration with Rx Digi Health Platform"
