--- a/_projects/2020-05-30-SearchSE.md
+++ b/_projects/2020-05-30-SearchSE.md
@@ -1,6 +1,7 @@
 ---
 title: "Investigating Users' Web Search Behaviour for Software Engineering and Maintenance Tasks"
 collection: projects
+excerpt: "We analyze the query logs from Bing to understand how web search is used in software engineering and maintenance tasks."
 type: "Research Project"
 permalink: /projects/2020-05-30-SearchSE
 venue: "Microsoft Research Lab - India"
