minor updates to blog post format

--- a/_literaryposts/2020-06-19-Care.md
+++ b/_literaryposts/2020-06-19-Care.md
@@ -5,15 +5,15 @@ permalink: /literaryposts/2020-06-19-Care/
 excerpt: "An excerpt from a book I'll never write."
 ---
 
-They always say that the people who we care for the most, hurt us the most. I thought that was silly. Why would someone I care for even think about hurting me? But boy was I wrong. Learnt my lesson the hard way even. I might have been naive to begin with. I may have even misunderstood you being polite to you caring. But it was when I needed you the most that I realised you were never really there for me in the first place. I was stupid to hope you'd be there.
+They always say that the people who we care for the most, hurt us the most. I thought that was silly. Why would someone I care for even think about hurting me? But boy was I wrong. Learnt my lesson the hard way even. I might have been naive to begin with. I may have even misunderstood you being polite to you caring. But it was when I needed you the most that I realised you were never really there for me in the first place. It was foolish to hope you would be there.
 
 My trust in you blinded me. I assumed that when you cared for someone they'd care for you too. It's only now that I know I was wrong. Me wanting to care for you was a choice I made. You choosing to not care about me was a choice you made. I have no control over what you choose. I just wish I knew you didn't choose me sooner so I didn't invest so much time in you. It would have even hurt less then. 
 
-Nobody is ever busy all the time. It's how high they prioritize you that matters. I was never really a priority to you, was I?  I would have given up everything if you said you needed me. I would have put you first and my work later and listened to you. I would have tried my best to comfort you. I would have always been there for you. But I was never that person for you. I know that now. I lost someone who did not care about me. You lost someone who would have done anything for you. Who's the bigger loser here? 
+Nobody is ever busy all the time. It's how high they prioritize you that matters. I was never really a priority to you, was I?  I would have given up everything if you said you needed me. I would have put you first, above everything else, and listened to you. I would have tried my best to comfort you. I would have always been there for you. But I was never that person for you. I know that now. I lost someone who did not care about me. You lost someone who would have done anything for you. Who's the bigger loser here? 
 
-I worked hard to build the bridge between us. I did everything I possibly could. But I needed you to cross it. And you didn't. I can not build the bridge and cross it too. That's too much for you to ask of me. I just needed you to walk across it. To show that you cared. To care. But none of it mattered to you, did it? 
+I worked hard to build the bridge between us. I did everything I possibly could. But I needed you to cross it and you didn't. I can not build the bridge and cross it too. That's too much for you to ask of me. I just needed you to walk across it. To show that you cared. To care. But none of it mattered to you, did it? 
 
-People keep advising me to let go of the things that hurt me. Things that don't allow me to be happy. I should take that advice a little more seriously from now on. I should learn to let go of the things that hurt me. Let me start with you. 
+I've been repeatedly advised to let go of things that hurt me. Things that don't allow me to be happy. I should take that advice a little more seriously from now on. I should learn to let go of the things that hurt me. Let me start with you. 
 
 > "You never really cared. I don't anymore. Now we are even." #ExcerptFromABookIWillNeverWrite
 
