updated CV and other related files

--- a/_publications/2020-07-10-SoftNER.md
+++ b/_publications/2020-07-10-SoftNER.md
@@ -2,7 +2,7 @@
 title: "Neural Knowledge Extraction From Cloud Service Incidents"
 collection: publications
 permalink: /publications/preprints/2020-07-10-SoftNER
-excerpt: "This paper is currently under review."
+excerpt: "The paper is currently under review."
 date: 2020-07-10
 venue: ''
 year: '2020'
@@ -19,4 +19,5 @@ This work has been featured on VentureBeat. You can find the article [here](http
 > Collaborators - Manish Shetty, [Chetan Bansal](https://www.microsoft.com/en-us/research/people/chetanb/){:target="_blank"}, Sumit Kumar, [Dr. Nachi Nagappan](https://nachinagappan.github.io/){:target="_blank"}, [Dr. Tom Zimmermann](http://thomas-zimmermann.com/){:target="_blank"}
 
 Please find all the relevant resources below:
-1. [ArXiv](https://arxiv.org/abs/2007.05505){:target="_blank"}.
+1. [Preprint on ArXiv.](https://arxiv.org/abs/2007.05505){:target="_blank"}
+2. Article on VentureBeat - [Microsoft’s SoftNER AI uses unsupervised learning to help triage cloud service outages](https://venturebeat.com/2020/07/14/microsofts-softner-ai-uses-unsupervised-learning-to-help-triage-cloud-service-outages/).
