--- a/_projects/2020-07-10-SoftNER.md
+++ b/_projects/2020-07-10-SoftNER.md
@@ -16,4 +16,5 @@ This work has been featured on VentureBeat. You can find the article [here](http
 > Collaborators - Manish Shetty, [Chetan Bansal](https://www.microsoft.com/en-us/research/people/chetanb/){:target="_blank"}, Sumit Kumar, [Dr. Nachi Nagappan](https://nachinagappan.github.io/){:target="_blank"}, [Dr. Tom Zimmermann](http://thomas-zimmermann.com/){:target="_blank"}
 
 Please find all the relevant resources below:
-1. [ArXiv](https://arxiv.org/abs/2007.05505){:target="_blank"}.
+1. [Preprint on ArXiv.](https://arxiv.org/abs/2007.05505){:target="_blank"}
+2. Article on VentureBeat - [Microsoft’s SoftNER AI uses unsupervised learning to help triage cloud service outages](https://venturebeat.com/2020/07/14/microsofts-softner-ai-uses-unsupervised-learning-to-help-triage-cloud-service-outages/).
