--- a/_publications/2020-08-27-SearchSE.md
+++ b/_publications/2020-08-27-SearchSE.md
@@ -1,10 +1,10 @@
 ---
-title: "Investigating Users' Web Search Behaviour for Software Engineering and Maintenance Tasks"
+title: "Analyzing Web Search Behavior for Software Engineering Tasks"
 collection: publications
 permalink: /publications/preprints/2020-08-27-SearchSE
-excerpt: "This paper is currently under review."
+excerpt: "The paper has been accepted for virtual presentation. [Acceptance Rate ≈ 15.5%]"
 date: 2020-08-27
-venue: ''
+venue: 'IEEE International Conference on Big Data (IEEE BigData)'
 year: '2020'
 authors: '<b>Nikitha Rao</b>, Chetan Bansal, Tom Zimmermann, Ahmed Hassan Awadallah, Nachi Nagappan'
 arxiv: 'https://arxiv.org/abs/1912.09519'
@@ -12,9 +12,11 @@ arxiv: 'https://arxiv.org/abs/1912.09519'
 #bib: 'https://ui.adsabs.harvard.edu/abs/2020arXiv200208936K'
 ---
 
-The Internet plays a key role in accomplishing many tasks. For many such tasks, web search is integral in finding relevant information. Similar to other domains, web search is also heavily used in software engineering (SE) to help with various SE specific tasks such as debugging, finding documentation, installation, etc. In this paper, we present the first large scale study on how web search is used in software engineering and maintenance. We analyze the query logs from a major commercial web search engine. Being able to disambiguate software engineering queries from other queries is important for understanding the usage of web search in software engineering. To this end, we build a machine learning based classifier to identify software engineering queries. We then analyze 1 million web search sessions to understand how software engineering related queries and sessions differ from other queries and sessions. Subsequently, we define the taxonomy of intents behind the usage of web search by software engineers. This allows us to develop a better understanding of the various contexts in which web search is used in software engineering and maintenance. We then analyse 6 million SE queries to understand the distribution of intents across various web search metrics and other trend characteristics. Our results show that web search is heavily used for various software engineering and maintenance tasks. Finally, we discuss the implications of this work on improving search engine support for software engineering queries by providing contextual assistance and we elaborate on how we can gain insights into common issues faced by developers which can be leveraged to improve and maintain different software technologies.
+Web search plays an integral role in software engineering (SE) to help with various tasks such as finding documentation, debugging, installation, etc. In this work, we present the first large-scale analysis of web search behavior for SE tasks using the search query logs from Bing, a commercial web search engine. First, we use distant supervision techniques to build a machine learning classifier to extract the SE search queries with an F1 score of 93%. We then perform an analysis on one million search sessions to understand how software engineering related queries and sessions differ from other queries and sessions. Subsequently, we propose a taxonomy of intents to identify the various contexts in which web search is used in software engineering. Lastly, we analyze millions of SE queries to understand the distribution, search metrics and trends across these SE search intents. Our analysis shows that SE related queries form a significant portion of the overall web search traffic. Additionally, we found that there are six major intent categories for which web search is used in software engineering. The techniques and insights can not only help improve existing tools but can also inspire the development of new tools that aid in finding information for SE related tasks.
+
+The paper has been accepted for virtual presentation at [IEEE BigData 2020](http://bigdataieee.org/BigData2020/){:target="_blank"}. [Acceptance Rate ≈ 15.5%]
 
 > Collaborators - [Chetan Bansal](https://www.microsoft.com/en-us/research/people/chetanb/){:target="_blank"}, [Dr. Tom Zimmermann](http://thomas-zimmermann.com/){:target="_blank"}, [Dr. Ahmed Hassan Awadallah](https://www.microsoft.com/en-us/research/people/hassanam/){:target="_blank"}, [Dr. Nachi Nagappan](https://nachinagappan.github.io/){:target="_blank"}
 
 Please find all the relevant resources below:
-1. [ArXiv](https://arxiv.org/abs/1912.09519){:target="_blank"}.
+1. [Preprint on ArXiv.](https://arxiv.org/abs/1912.09519){:target="_blank"}
