--- a/_projects/2020-07-10-SoftNER.md
+++ b/_projects/2020-07-10-SoftNER.md
@@ -11,6 +11,8 @@ location: "Bangalore, India"
 
 In the last decade, two paradigm shifts have reshaped the software industry - the move from boxed products to services and the widespread adoption of cloud computing. This has had a huge impact on the software development life cycle and the DevOps processes. Particularly, incident management has become critical for developing and operating large-scale services. Incidents are created to ensure timely communication of service issues and, also, their resolution. Prior work on incident management has been heavily focused on the challenges with incident triaging and de-duplication. In this work, we address the fundamental problem of structured knowledge extraction from service incidents. We have built SoftNER, a framework for unsupervised knowledge extraction from service incidents. We frame the knowledge extraction problem as a Named-entity Recognition task for extracting factual information. SoftNER leverages structural patterns like key,value pairs and tables for bootstrapping the training data. Further, we build a novel multi-task learning based BiLSTM-CRF model which leverages not just the semantic context but also the data-types for named-entity extraction. We have deployed SoftNER at Microsoft, a major cloud service provider and have evaluated it on more than 2 months of cloud incidents. We show that the unsupervised machine learning based approach has a high precision of 0.96. Our multi-task learning based deep learning model also outperforms the state of the art NER models. Lastly, using the knowledge extracted by SoftNER we are able to build significantly more accurate models for important downstream tasks like incident triaging.
 
+The paper has been accepted for virtual presentation at [ICSE SEIP 2021](https://conf.researchr.org/track/icse-2021/icse-2021-Software-Engineering-in-Practice){:target="_blank"}. [Acceptance Rate ≈ 34%]
+
 This work has been featured on VentureBeat. You can find the article [here](https://venturebeat.com/2020/07/14/microsofts-softner-ai-uses-unsupervised-learning-to-help-triage-cloud-service-outages/){:target="_blank"}.
 
 > Collaborators - Manish Shetty, [Chetan Bansal](https://www.microsoft.com/en-us/research/people/chetanb/){:target="_blank"}, Sumit Kumar, [Dr. Nachi Nagappan](https://nachinagappan.github.io/){:target="_blank"}, [Dr. Tom Zimmermann](http://thomas-zimmermann.com/){:target="_blank"}
