updated publications and cv

--- a/_projects/2020-05-30-SearchSE.md
+++ b/_projects/2020-05-30-SearchSE.md
@@ -17,3 +17,4 @@ This work has been accepted for virtual presentation at [IEEE BigData 2020](http
 
 Please find all the relevant resources below:
 1. [Preprint on ArXiv.](https://arxiv.org/abs/1912.09519){:target="_blank"}
+2. [Conference paper.](https://ieeexplore.ieee.org/abstract/document/9378083){:target="_blank"}
