--- a/_publications/2020-08-27-SearchSE.md
+++ b/_publications/2020-08-27-SearchSE.md
@@ -8,7 +8,7 @@ venue: 'IEEE International Conference on Big Data (IEEE BigData)'
 year: '2020'
 authors: '<b>Nikitha Rao</b>, Chetan Bansal, Tom Zimmermann, Ahmed Hassan Awadallah, Nachi Nagappan'
 arxiv: 'https://arxiv.org/abs/1912.09519'
-#paperurl: 'https://arxiv.org/abs/2005.08591'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/9378083'
 #bib: 'https://ui.adsabs.harvard.edu/abs/2020arXiv200208936K'
 ---
 
@@ -20,3 +20,4 @@ The paper has been accepted for virtual presentation at [IEEE BigData 2020](http
 
 Please find all the relevant resources below:
 1. [Preprint on ArXiv.](https://arxiv.org/abs/1912.09519){:target="_blank"}
+2. [Conference paper.](https://ieeexplore.ieee.org/abstract/document/9378083){:target="_blank"}
