updated about page and added links to papers

--- a/_publications/2020-07-10-SoftNER.md
+++ b/_publications/2020-07-10-SoftNER.md
@@ -8,7 +8,7 @@ venue: '43rd International Conference on Software Engineering (ICSE SEIP)'
 year: '2021'
 authors: 'Manish Shetty, Sumit Kumar, Chetan Bansal, <b>Nikitha Rao</b>, Nachi Nagappan, Tom Zimmermann'
 arxiv: 'https://arxiv.org/abs/2007.05505'
-#paperurl: 'https://arxiv.org/abs/2005.08591'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/9402085'
 #bib: 'https://ui.adsabs.harvard.edu/abs/2020arXiv200208936K'
 ---
 
@@ -22,4 +22,5 @@ This work has also been featured on VentureBeat. You can find the article [here]
 
 Please find all the relevant resources below:
 1. [Preprint on ArXiv.](https://arxiv.org/abs/2007.05505){:target="_blank"}
-2. Article on VentureBeat - [Microsoft’s SoftNER AI uses unsupervised learning to help triage cloud service outages](https://venturebeat.com/2020/07/14/microsofts-softner-ai-uses-unsupervised-learning-to-help-triage-cloud-service-outages/).
+2. [Conference paper.](https://ieeexplore.ieee.org/abstract/document/9402085){:target="_blank"}
+3. Article on VentureBeat - [Microsoft’s SoftNER AI uses unsupervised learning to help triage cloud service outages](https://venturebeat.com/2020/07/14/microsofts-softner-ai-uses-unsupervised-learning-to-help-triage-cloud-service-outages/).
