--- a/_projects/2020-07-10-SoftNER.md
+++ b/_projects/2020-07-10-SoftNER.md
@@ -19,4 +19,5 @@ This work has been featured on VentureBeat. You can find the article [here](http
 
 Please find all the relevant resources below:
 1. [Preprint on ArXiv.](https://arxiv.org/abs/2007.05505){:target="_blank"}
-2. Article on VentureBeat - [Microsoft’s SoftNER AI uses unsupervised learning to help triage cloud service outages](https://venturebeat.com/2020/07/14/microsofts-softner-ai-uses-unsupervised-learning-to-help-triage-cloud-service-outages/).
+2. [Conference paper.](https://ieeexplore.ieee.org/abstract/document/9402085){:target="_blank"}
+3. Article on VentureBeat - [Microsoft’s SoftNER AI uses unsupervised learning to help triage cloud service outages](https://venturebeat.com/2020/07/14/microsofts-softner-ai-uses-unsupervised-learning-to-help-triage-cloud-service-outages/).
