updated formatting of links on publications, and updated about

--- a/_publications/2023-10-02-CATLM.md
+++ b/_publications/2023-10-02-CATLM.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publications/preprints/2023-10-02-CATLM
 excerpt: ""
 date: 2023-10-02
-venue: 'Automated Software Engineering'
+venue: 'Automated Software Engineering (ASE)'
 year: '2023'
 authors: '<b>Nikitha Rao</b>, Kush Jain, Uri Alon, Claire Le Goues, Vincent Hellendoorn'
 arxiv: 'https://arxiv.org/abs/2310.01602'
