--- a/_publications/2023-10-02-CATLM.md
+++ b/_publications/2023-10-02-CATLM.md
@@ -6,7 +6,7 @@ excerpt: ""
 date: 2023-10-02
 venue: 'Automated Software Engineering (ASE)'
 year: '2023'
-authors: '<b>Nikitha Rao</b>, Kush Jain, Uri Alon, Claire Le Goues, Vincent Hellendoorn'
+authors: '<b>Nikitha Rao</b>*, Kush Jain*, Uri Alon, Claire Le Goues, Vincent Hellendoorn'
 arxiv: 'https://arxiv.org/abs/2310.01602'
 #paperurl: ''
 #bib: ''
