--- a/_publications/2023-05-31-LowCoder.md
+++ b/_publications/2023-05-31-LowCoder.md
@@ -4,10 +4,10 @@ collection: publications
 permalink: /publications/preprints/2023-05-31-LowCoder
 excerpt: ""
 date: 2023-05-31
-venue: ''
-year: '2023'
+venue: 'Intelligent User Interfaces (IUI)'
+year: '2024'
 authors: '<b>Nikitha Rao</b>, Jason Tsay, Kiran Kate, Vincent J. Hellendoorn, Martin Hirzel'
-arxiv: 'http://arxiv.org/abs/2204.00107'
+arxiv: 'https://arxiv.org/abs/2305.20015'
 #paperurl: 'https://dl.acm.org/doi/abs/10.1145/3524842.3528475'
 #bib: ''
 code: 'https://doi.org/10.5281/zenodo.7042296'
