update publications and CV

--- a/_publications/2023-10-02-CATLM.md
+++ b/_publications/2023-10-02-CATLM.md
@@ -1,14 +1,14 @@
 ---
 title: "CAT-LM: Training Language Models on Aligned Code And Tests"
 collection: publications
-permalink: /publications/preprints/2023-10-02-CATLM
+permalink: /publications/2023-10-02-CATLM
 excerpt: ""
 date: 2023-10-02
 venue: 'Automated Software Engineering (ASE)'
 year: '2023'
 authors: '<b>Nikitha Rao</b>*, Kush Jain*, Uri Alon, Claire Le Goues, Vincent Hellendoorn'
 arxiv: 'https://arxiv.org/abs/2310.01602'
-#paperurl: ''
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/10298372'
 #bib: ''
 code: 'https://github.com/RaoNikitha/CAT-LM'
 data: 'https://zenodo.org/records/7909299'
