--- a/_publications/2024-05-31-LowCoder.md
+++ b/_publications/2024-05-31-LowCoder.md
@@ -1,14 +1,14 @@
 ---
 title: "AI for Low-Code for AI"
 collection: publications
-permalink: /publications/preprints/2023-05-31-LowCoder
+permalink: /publications/2024-05-31-LowCoder
 excerpt: ""
 date: 2023-05-31
 venue: 'Intelligent User Interfaces (IUI)'
 year: '2024'
 authors: '<b>Nikitha Rao</b>, Jason Tsay, Kiran Kate, Vincent J. Hellendoorn, Martin Hirzel'
 arxiv: 'https://arxiv.org/abs/2305.20015'
-#paperurl: 'https://dl.acm.org/doi/abs/10.1145/3524842.3528475'
+paperurl: 'https://dl.acm.org/doi/abs/10.1145/3640543.3645203'
 #bib: ''
 code: 'https://doi.org/10.5281/zenodo.7042296'
 ---
